update java to 21 and fix errors